# Ditto-5.2-diagostic

./: .gitignore  README.md  budget_tracker.csv  next_steps.py  pyproject.toml  requirements.txt
prereg/: DDK_v0.1_PREREG.md  DDK_v0.1_PREREG.sha256  decision_log.md
synthesis/: interim_memo_post_tier0.md  synthesis_v0.1.md
tests/: test_d_0_1.py  test_d_0_2.py  test_d_0_5.py  test_d_1_1_poker.py  test_d_1_1_pubg.py
tier0/: d_0_1_per_cell_breakdown.py  d_0_2_confusion_matrix.py  d_0_3_power_audit.py  d_0_4_confound_check.py  d_0_5_output_structure.py  tier0_pipeline.py
tier0_outputs/: tier0_summary.md
tier0_outputs/d_0_1/: effects_per_cell.csv  summary.md
tier0_outputs/d_0_2/: mechanism_breakdown.csv  mechanism_shares.csv  representative_responses.md  summary.md
tier0_outputs/d_0_3/: bayes_factor.txt  summary.md
tier0_outputs/d_0_4/: confound_table.csv  summary.md
tier0_outputs/d_0_5/: representative_examples.md  structural_feature_deltas.csv  structural_features_per_cell.csv  summary.md
tier1/: d_1_2_baseline_intervention.py  d_1_3_format_variation.py  d_1_4_v1_replay.py  tier1_pipeline.py
tier1/d_1_1_symbolic_detection/: __init__.py  csgo_rules.py  d_1_1_runner.py  nba_rules.py  poker_rules.py  pubg_rules.py  rocket_league_rules.py
tier1_outputs/: tier1_summary.md
tier1_outputs/d_1_1/: csgo_summary.md  csgo_symbolic_results.csv  d_1_1_overall_summary.md  nba_summary.md  nba_symbolic_results.csv  poker_summary.md  poker_symbolic_results.csv  pubg_agreement_matrix.csv  (+3 more)
utils/: __init__.py  budget.py  data_loader.py  scoring.py  v51_adapter.py
(+11 files in other folders)
